# poc-cesg-route-search

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
docker/: Dockerfile
docs/: data-layout-notes.md  findings.md  hypothesis.md  index.html  knative-deploy.md  knative-next-step.md  tokyo-valhalla-pipeline.md
k8s/: ksvc-z.yaml  ksvc.yaml
outputs-samples/: route-one.meta.json  tar-index-summary.json  tar-manifest-sample.json  tile-layout-summary.json  tile-layout-summary.md  tokyo-route-one.geojson  tokyo-route-one.meta.json  tokyo-tile-layout-summary.json  tokyo-tile-layout-summary.md
scripts/: 001_check_env.py  010_route_one.py  020_inspect_tile_layout.py  030_inspect_tar_index.py  040_build_tar_manifest.py  050_benchmark_routes.py  100_prepare_tokyo_data.sh  110_build_tokyo_valhalla_tiles.sh  120_patch_tokyo_valhalla_config.py  130_route_tokyo_one.py  140_inspect_tokyo_tiles.py  200_run_local_server.py  210_build_route_server_image.sh  220_run_route_server_container.sh  900_build_small_valhalla_tiles_optional.sh
src/cesg_route_search/: __init__.py  app.py  config.py  geojson.py  route.py  server.py  tar_index.py  tile_layout.py  valhalla_actor.py
tests/: test_health_routes.py
